refactor: restructure the CLI module to correctly use cz.pizavo.omnisign package; modify Gradle to solve arbitrary warning messages