@@ -36,4 +36,9 @@ dependencies {
 
 tasks.withType<Test> {
     useJUnitPlatform()
+    jvmArgs(
+        "-XX:+EnableDynamicAgentLoading",
+        "-Xshare:off",
+        "--enable-native-access=ALL-UNNAMED",
+    )
 }
